Add toggle for hiding unscheduled shifts

--- a/events/templates/events/detail/event_detail.html
+++ b/events/templates/events/detail/event_detail.html
@@ -18,8 +18,10 @@
             <button type="button" class="btn btn-dark float-right"><span>Email</span></button>
             <form class="submit-schedule" action="/create_post/" method="POST" id="post-form">
               <input class="btn btn-primary" type="submit" value="Submit">
-              <div class="random-text">test</div>
+              
+              <!--<div class="random-text">test</div>-->
             </form>
+            <input class="toggle-shifts" type="checkbox" checked data-toggle="toggle">
           </h2>
         </div>
       </div>
