--- a/events/templates/events/detail/location_card.html
+++ b/events/templates/events/detail/location_card.html
@@ -1,49 +1,37 @@
 {% load staticfiles %}
 
 <div class="card mx-auto shadow" class='testing'>
-
-  
-              
   <div class="card-header location-header">
-      <label class='location-title' data-target='#{{location.id}}' data-toggle='collapse'>
-      <input class='active-location mr-2' type="checkbox" checked />
-        {{location}}
-      </label>
+      <label class='location-title' data-target='#{{location|slugify}}' data-toggle='collapse'>
+      <input class='active-location mr-2' type="checkbox" checked />{{location}}</label>
       {# <!--<a class='{{location.location_id}}'><img class='float-right ml-1 add-employee' src='{% static "events/img/plus.svg" %}' alt="Plus Symbol"/></a>--> #}
       {# <!--<a class='{{location.location_id}}'><img class='float-right ml-1 remove-employee {{location.location_id}}' id='remove-{{location.location_id}}' src='{% static "events/img/minus.svg" %}' alt="Minus Symbol"/></a>--> #}
   </div>
       
-  <div class="card-body location-body collapse {{position|yesno:'show,hide'}}" id="{{location.id}}" aria-expanded="true">
+  <div class="card-body location-body collapse {{position|yesno:'show,hide'}}" id="{{location|slugify}}" aria-expanded="true">
   {% for shift, scheduled in position.items %}
-    <div class='row'>
-        <div class="btn-group" style="width:100%;">
-          <div class="input-group input-group-sm">
-            <div class="col col-2 pr-0 input-group-prepend">
-              <div class="input-group-text" style="width:100%;">{{shift}}</div>
-            </div>
-            <select class="col col-6 form-control form-control-sm">
-              
-              {% if scheduled %}
-                <option value='{{shift}}' class='{{shift}}' selected>{{scheduled.employee}}</option>
-              {% else %}
-                <option value='{{shift}}' class='{{shift}}' selected>{{shift}}</option>
-              {% endif %}
-              
-              {% for employee in all_employees%}
-                <option class="{{employee}}">{{employee.name}}</option>
-              {% endfor %}
-            </select>
-            <div class="col col-4 pl-0 input-group-append input-group-sm">
-              <input type="text" class="form-control" placeholder="e.g. 6:30PM" aria-label="Username" style="border-bottom-left-radius: 0px;border-top-left-radius: 0px;">
-            </div>
+    <div class='row {{scheduled.arrival_time|yesno:"scheduled,unscheduled"}}'>
+      <div class="btn-group" style="width:100%;">
+        <div class="input-group input-group-sm">
+          <div class="col col-2 pr-0 input-group-prepend">
+            <div class="input-group-text" style="width:100%;">{{shift}}</div>
           </div>
- 
+          <select class="col col-6 form-control form-control-sm">
+            <option value='{{shift}}' class='{{shift}}' selected>{{scheduled.employee|default:shift}}</option>
+            {% for employee in all_employees %}
+              <option class="{{employee}}">{{employee.name}}</option>
+            {% endfor %}
+          </select>
+          <div class="col col-4 pl-0 input-group-append input-group-sm">
+            <input type="text" class="form-control" placeholder="Arrival" aria-label="Username" style="border-bottom-left-radius: 0px;border-top-left-radius: 0px;">
+          </div>
         </div>
-
-          {# {% include 'events/detail/add_row.html' with loc=location.location_id %} #}
-          <br />
+      </div>
+      {# {% include 'events/detail/add_row.html' with loc=location.location_id %} #}
+      <br />
     </div>
   {% endfor %}
   </div>
+  
 </div>
 <br/>
