--- a/events/static/events/css/style.css
+++ b/events/static/events/css/style.css
@@ -193,3 +193,104 @@ button:focus {
 .input-group-text {padding: 0rem .75rem; font-weight:600;}
 
 .location-header input {vertical-align:middle;}
+
+
+
+
+
+
+
+
+
+
+
+
+ul,
+li {
+	list-style: none;
+	margin: 0;
+	padding: 0;
+}
+
+.tg-list {
+	text-align: center;
+	display: flex;
+	align-items: center;
+}
+
+.tg-list-item {
+	margin: 0 2em;
+}
+
+h2 {
+	color: #777;
+}
+
+h4 {
+	color: #999;
+}
+
+.tgl {
+	display: none;
+  
+  &,
+  &:after,
+  &:before,
+  & *,
+  & *:after,
+  & *:before,
+	& + .tgl-btn {
+		box-sizing: border-box;
+		&::selection {
+			background: none;
+		}
+	}
+  
+	+ .tgl-btn {
+		outline: 0;
+		display: block;
+		width: 4em;
+		height: 2em;
+		position: relative;
+		cursor: pointer;
+    user-select: none;
+		&:after,
+    &:before {
+			position: relative;
+			display: block;
+			content: "";
+			width: 50%;
+			height: 100%;
+		}
+    
+		&:after {
+			left: 0;
+		}
+    
+		&:before {
+			display: none;
+		}
+	}
+  
+	&:checked + .tgl-btn:after {
+		left: 50%;
+	}
+}
+
+.tgl-light {
+	+ .tgl-btn {
+		background: #f0f0f0;
+		border-radius: 2em;
+		padding: 2px;
+		transition: all .4s ease;
+		&:after {
+			border-radius: 50%;
+			background: #fff;
+			transition: all .2s ease;
+		}
+	}
+  
+	&:checked + .tgl-btn {
+		background: #9FD6AE;
+	}
+}
