--- a/events/templates/events/detail/event_detail.html
+++ b/events/templates/events/detail/event_detail.html
@@ -21,50 +21,16 @@
               
               <!--<div class="random-text">test</div>-->
             </form>
-            <input class="toggle-shifts" type="checkbox" checked data-toggle="toggle">
+            <!--<input class="toggle-shifts" type="checkbox" checked data-toggle="toggle">-->
           </h2>
         </div>
       </div>
       <hr />
       
       
-      <div class='col col-12 align-right'>
-        <form>
-          <div class="form-row">
-            <div class="col col-4">
-              <label class="sr-only">Managers</label>
-              <div class="input-group">
-                <div class="input-group-prepend">
-                  <div class="input-group-text">Managers:</div>
-                </div>
-                <input type="text" class="form-control" id="inlineFormInputGroupUsername" placeholder="Arrival Time (e.g. 5:30PM)">
-              </div>
-            </div>
-            <div class="col col-4">
-              <label class="sr-only">Managers</label>
-              <div class="py-1 input-group">
-                <div class="input-group-prepend">
-                  <div class="input-group-text">Preps:</div>
-                </div>
-                <input type="text" class="form-control" id="inlineFormInputGroupUsername" placeholder="Arrival Time (e.g. 5:30PM)">
-              </div>
-            </div>
-            <div class="col col-4">
-              <label class="sr-only">Managers</label>
-              <div class="input-group">
-                <div class="input-group-prepend">
-                  <div class="input-group-text">Cashiers:</div>
-                </div>
-                <input type="text" class="form-control" id="inlineFormInputGroupUsername" placeholder="Arrival Time (e.g. 5:30PM)">
-              </div>
-            </div>
-          </div>
-        </form>
-      </div>
       
       
-      
-      <hr />
+
 
       <div class='row mx-auto'>
         <div class='col col-12'>
