--- a/events/templates/events/detail/event_header.html
+++ b/events/templates/events/detail/event_header.html
@@ -25,47 +25,79 @@
     
   <!--</div>-->
   
-  
+      
   
 
-<ul class="tg-list">
-  <li class="tg-list-item">
-    <h4>Light</h4>
-    <input class="tgl tgl-light" id="cb1" type="checkbox"/>
-    <label class="tgl-btn" for="cb1"></label>
-  </li>
-</ul>
+
+
   
   
+  <div class='col-3'>
+    <div class='card custom-shadow'>
+    </div>
+  </div>
   
   
-  
-  <div class='col-12'>
+  <div class='col-9'>
     <div class='card custom-shadow'>
       <div class='card-header'>
         Control Panel
       </div>
       <div class='card-body'>
         <div class='row'>
-        <div class='col-4'>
-          <div class="input-group">
-            <select class="custom-select" id="inputGroupSelect04">
-              <option selected>Update Entire Schedule...</option>
-              <option value="1">Reset to Blank</option>
-              <option value="2">Reset to Last Save</option>
-              <option value="3">Reset to Previous Event</option>
-            </select>
-            <div class="input-group-append">
-              <button class="btn btn-dark" type="button">Update</button>
+        
+        
+        
+        
+        <div class='col-7 my-1'>
+          
+            <div class="input-group">
+              <select class="custom-select" id="inputGroupSelect04">
+                <option selected>Mass Update...</option>
+                <option value="1">Reset to Blank</option>
+                <option value="2">Reset to Last Save</option>
+                <option value="3">Reset to Previous Event</option>
+              </select>
+              <div class="input-group-append">
+                <button class="btn btn-dark" type="button">Update</button>
+              </div>
             </div>
+            
+          
+
+            
+          <div class='employee-toggle row pl-0 py-2 mx-0 mt-2' style="font-weight:600; line-height:1.2em;">
+            <form style='width:100%'>
+            
+            <div class="row ml-0">
+            <div class='col col-7'>
+              <a>Scheduled Employees:</a>
+            </div>
+            <div class='col col-5'>
+                <button type="button" class="btn btn-toggle toggle-scheduled active" data-toggle="button" aria-pressed="true" autocomplete="off">
+                  <div class="handle"></div>
+                </button>
+              </div>
+            </div>
+            
+            <div class="row ml-0">
+            <div class='col col-7'>
+              <a>Unscheduled Employees:</a>
+            </div>
+            <div class='col col-5'>
+                <button type="button" class="btn btn-toggle toggle-unscheduled active" data-toggle="button" aria-pressed="true" autocomplete="off">
+                  <div class="handle"></div>
+                </button>
+              </div>
+            </div>
+            </form>
           </div>
-          <!--<button type="button" class="btn btn-dark"><span>Reset to Template</span></button><br />-->
-          <!--<button type="button" class="btn btn-dark"><span>Revert to Last Save</span></button><br />-->
-          <!--<button type="button" class="btn btn-dark"><span>Previous Event Template</span></button><br />-->
-        </div>
+          
+          </div>
+          
+ 
         
-        
-        <div class='col-4'>
+        <div class='col-5'>
           <form>
             <div class="form-row justify-content-end">
               <div class="col-sm-12 my-1">
@@ -74,7 +106,7 @@
                   <div class="input-group-prepend">
                     <div class="input-group-text">Managers:</div>
                   </div>
-                  <input type="text" class="form-control" id="inlineFormInputGroupUsername" placeholder="Arrival Time (e.g. 5:30PM)">
+                  <input type="text" class="form-control" id="inlineFormInputGroupUsername" placeholder="Arrival Time">
                   <div class="input-group-append">
                     <button class="btn btn-dark" type="button">Update</button>
                   </div>
@@ -84,7 +116,7 @@
                   <div class="input-group-prepend">
                     <div class="input-group-text">Preps:</div>
                   </div>
-                  <input type="text" class="form-control" id="inlineFormInputGroupUsername" placeholder="Arrival Time (e.g. 5:30PM)">
+                  <input type="text" class="form-control" id="inlineFormInputGroupUsername" placeholder="Arrival Time">
                   <div class="input-group-append">
                     <button class="btn btn-dark" type="button">Update</button>
                   </div>
@@ -94,7 +126,7 @@
                   <div class="input-group-prepend">
                     <div class="input-group-text">Cashiers:</div>
                   </div>
-                  <input type="text" class="form-control" id="inlineFormInputGroupUsername" placeholder="Arrival Time (e.g. 5:30PM)">
+                  <input type="text" class="form-control" id="inlineFormInputGroupUsername" placeholder="Arrival Time">
                   <div class="input-group-append">
                     <button class="btn btn-dark" type="button">Update</button>
                   </div>
@@ -104,18 +136,7 @@
           </form>
         </div>
         
-        <div class='col-4'>
-          <div>
-            Scheduled Employees: <button class="btn btn-dark" type="button">Show/Hide</button><br />
-          </div>
-          <div>
-            Unscheduled Employees: <button class="btn btn-dark" type="button">Show/Hide</button><br />
-          </div>
-          <div>
-            Unscheduled Locations: <button class="btn btn-dark" type="button">Show/Hide</button><br />
-          </div>
-          
-        </div>
+    
         
         
         
