--- a/events/templates/events/detail/event_detail.html
+++ b/events/templates/events/detail/event_detail.html
@@ -7,31 +7,9 @@
   {% include 'events/detail/event_header.html' %}
   
   <div class='card custom-shadow' style='border-radius:8px;'>
+    <div class='card-header'>Schedule</div>
     <div class='card-body mx-auto align-center'>
       
-      <div class='row'>
-        <div class='col col-12 schedule-header'>
-          <h2>
-            <span class='schedule'>Schedule</span>
-            <button type="button" class="btn btn-dark float-right print"><span>Print</span></button>
-            <button type="button" class="mx-2 btn-dark btn float-right"><span>Export</span></button>
-            <button type="button" class="btn btn-dark float-right"><span>Email</span></button>
-            <form class="submit-schedule" action="/create_post/" method="POST" id="post-form">
-              <input class="btn btn-primary" type="submit" value="Submit">
-              
-              <!--<div class="random-text">test</div>-->
-            </form>
-            <!--<input class="toggle-shifts" type="checkbox" checked data-toggle="toggle">-->
-          </h2>
-        </div>
-      </div>
-      <hr />
-      
-      
-      
-      
-
-
       <div class='row mx-auto'>
         <div class='col col-12'>
           <div class='card-columns'>
