--- a/events/templates/events/detail/event_header.html
+++ b/events/templates/events/detail/event_header.html
@@ -1,44 +1,26 @@
 <div class='row mb-3'>
-  <!--<div class='col-4'>-->
-  <!--  <div class='card custom-shadow'>-->
-  <!--    <div class='card-header'>-->
-  <!--      Reset to Template-->
-  <!--    </div>-->
-  <!--    <div class='card-body'>-->
-    
-  <!--    </div>-->
-  <!--  </div>-->
-  <!--</div>-->
-  <!--  <div class='col-4'>-->
-  <!--  <div class='card custom-shadow'>-->
-  <!--    <div class='card-header'>-->
-  <!--      Show / Hide-->
-  <!--    </div>-->
-  <!--    <div class='card-body'>-->
-    
-  <!--    </div>-->
-  <!--  </div>-->
-  <!--</div>-->
-  <!--<div class='col-4'>-->
-  <!--  <div class='card custom-shadow'>-->
-  <!--  </div>-->
-    
-  <!--</div>-->
-  
-      
-  
 
 
-
-  
-  
-  <div class='col-3'>
+  <div class='col-5'>
     <div class='card custom-shadow'>
+      <div class='card-header'>
+        Event Details
+      </div>
+      <div class='card-body'>
+        
+        Title: {{event.title}}<br />
+        Date: {{event.date}}<br />
+        Doors: {{event.doors_open}}<br />
+        
+        <button type="button" class="btn btn-dark float-left print"><span>Print</span></button>
+            <button type="button" class="mx-2 btn-dark btn float-left"><span>Export</span></button>
+            <button type="button" class="btn btn-dark float-left"><span>Email</span></button>
+      </div>
     </div>
   </div>
   
   
-  <div class='col-9'>
+  <div class='col-7'>
     <div class='card custom-shadow'>
       <div class='card-header'>
         Control Panel
@@ -49,7 +31,7 @@
         
         
         
-        <div class='col-7 my-1'>
+        <div class='col-6 my-1 pr-0'>
           
             <div class="input-group">
               <select class="custom-select" id="inputGroupSelect04">
@@ -71,7 +53,7 @@
             
             <div class="row ml-0">
             <div class='col col-7'>
-              <a>Scheduled Employees:</a>
+              <a>Scheduled:</a>
             </div>
             <div class='col col-5'>
                 <button type="button" class="btn btn-toggle toggle-scheduled active" data-toggle="button" aria-pressed="true" autocomplete="off">
@@ -82,7 +64,7 @@
             
             <div class="row ml-0">
             <div class='col col-7'>
-              <a>Unscheduled Employees:</a>
+              <a>Unscheduled:</a>
             </div>
             <div class='col col-5'>
                 <button type="button" class="btn btn-toggle toggle-unscheduled active" data-toggle="button" aria-pressed="true" autocomplete="off">
@@ -97,28 +79,30 @@
           
  
         
-        <div class='col-5'>
+        <div class='col'>
           <form>
             <div class="form-row justify-content-end">
               <div class="col-sm-12 my-1">
+                
                 <label class="sr-only" for="inlineFormInputGroupUsername">Managers</label>
                 <div class="input-group">
                   <div class="input-group-prepend">
                     <div class="input-group-text">Managers:</div>
                   </div>
-                  <input type="text" class="form-control" id="inlineFormInputGroupUsername" placeholder="Arrival Time">
+                  <input type="text" class="form-control" id="inlineFormInputGroupUsername" placeholder="Arrive" />
                   <div class="input-group-append">
-                    <button class="btn btn-dark" type="button">Update</button>
+                    <button class="btn btn-dark" id='manager' type="button">Update</button>
                   </div>
                 </div>
+                
                 <label class="sr-only" for="inlineFormInputGroupUsername">Managers</label>
                 <div class="py-1 input-group">
                   <div class="input-group-prepend">
                     <div class="input-group-text">Preps:</div>
                   </div>
-                  <input type="text" class="form-control" id="inlineFormInputGroupUsername" placeholder="Arrival Time">
+                  <input type="text" class="form-control" id="inlineFormInputGroupUsername" placeholder="Arrive">
                   <div class="input-group-append">
-                    <button class="btn btn-dark" type="button">Update</button>
+                    <button class="btn btn-dark" id='prep' type="button">Update</button>
                   </div>
                 </div>
                 <label class="sr-only" for="inlineFormInputGroupUsername">Managers</label>
@@ -126,9 +110,9 @@
                   <div class="input-group-prepend">
                     <div class="input-group-text">Cashiers:</div>
                   </div>
-                  <input type="text" class="form-control" id="inlineFormInputGroupUsername" placeholder="Arrival Time">
+                  <input type="text" class="form-control" id="inlineFormInputGroupUsername" placeholder="Arrive">
                   <div class="input-group-append">
-                    <button class="btn btn-dark" type="button">Update</button>
+                    <button class="btn btn-dark" id='cashier' type="button">Update</button>
                   </div>
                 </div>
               </div>
@@ -147,34 +131,3 @@
     </div>
   </div>
 </div>
-
-
-<!--<div class='col col-6 align-right'>-->
-<!--        <form>-->
-<!--          <div class="form-row justify-content-end">-->
-<!--            <div class="col-sm-8 my-1">-->
-<!--              <label class="sr-only" for="inlineFormInputGroupUsername">Managers</label>-->
-<!--              <div class="input-group">-->
-<!--                <div class="input-group-prepend">-->
-<!--                  <div class="input-group-text">Managers:</div>-->
-<!--                </div>-->
-<!--                <input type="text" class="form-control" id="inlineFormInputGroupUsername" placeholder="Arrival Time (e.g. 5:30PM)">-->
-<!--              </div>-->
-<!--              <label class="sr-only" for="inlineFormInputGroupUsername">Managers</label>-->
-<!--              <div class="py-1 input-group">-->
-<!--                <div class="input-group-prepend">-->
-<!--                  <div class="input-group-text">Preps:</div>-->
-<!--                </div>-->
-<!--                <input type="text" class="form-control" id="inlineFormInputGroupUsername" placeholder="Arrival Time (e.g. 5:30PM)">-->
-<!--              </div>-->
-<!--              <label class="sr-only" for="inlineFormInputGroupUsername">Managers</label>-->
-<!--              <div class="input-group">-->
-<!--                <div class="input-group-prepend">-->
-<!--                  <div class="input-group-text">Cashiers:</div>-->
-<!--                </div>-->
-<!--                <input type="text" class="form-control" id="inlineFormInputGroupUsername" placeholder="Arrival Time (e.g. 5:30PM)">-->
-<!--              </div>-->
-<!--            </div>-->
-<!--          </div>-->
-<!--        </form>-->
-<!--      </div>-->
