Add show/hide toggle for event detail template locations

--- a/events/templates/events/detail/event_detail.html
+++ b/events/templates/events/detail/event_detail.html
@@ -7,7 +7,11 @@
   {% include 'events/detail/event_header.html' %}
   
   <div class='card custom-shadow' style='border-radius:8px;'>
-    <div class='card-header'>Schedule</div>
+    <div class='card-header'>
+      Schedule
+      <div class='btn btn-dark float-right'>Save</div>
+      </div>
+    
     <div class='card-body mx-auto align-center'>
       
       <div class='row mx-auto'>
