--- a/events/templates/events/detail/event_header.html
+++ b/events/templates/events/detail/event_header.html
@@ -72,6 +72,19 @@
                 </button>
               </div>
             </div>
+            
+            
+            <div class="row ml-0">
+            <div class='col col-7'>
+              <a>All Locations:</a>
+            </div>
+            <div class='col col-5'>
+                <button type="button" class="btn btn-toggle toggle-unscheduled" data-toggle="button" aria-pressed="false" autocomplete="off">
+                  <div class="handle"></div>
+                </button>
+              </div>
+            </div>
+            
             </form>
           </div>
           
@@ -84,8 +97,7 @@
             <div class="form-row justify-content-end">
               <div class="col-sm-12 my-1">
                 
-                <label class="sr-only" for="inlineFormInputGroupUsername">Managers</label>
-                <div class="input-group">
+                <div class="input-group pb-1">
                   <div class="input-group-prepend">
                     <div class="input-group-text">Managers:</div>
                   </div>
@@ -95,8 +107,7 @@
                   </div>
                 </div>
                 
-                <label class="sr-only" for="inlineFormInputGroupUsername">Managers</label>
-                <div class="py-1 input-group">
+                <div class="input-group pb-1">
                   <div class="input-group-prepend">
                     <div class="input-group-text">Preps:</div>
                   </div>
@@ -105,14 +116,22 @@
                     <button class="btn btn-dark" id='prep' type="button">Update</button>
                   </div>
                 </div>
-                <label class="sr-only" for="inlineFormInputGroupUsername">Managers</label>
-                <div class="input-group">
+                <div class="input-group pb-1">
                   <div class="input-group-prepend">
                     <div class="input-group-text">Cashiers:</div>
                   </div>
                   <input type="text" class="form-control" id="inlineFormInputGroupUsername" placeholder="Arrive">
                   <div class="input-group-append">
                     <button class="btn btn-dark" id='cashier' type="button">Update</button>
+                  </div>
+                </div>
+                <div class="input-group pb-1">
+                  <div class="input-group-prepend">
+                    <div class="input-group-text">Bartenders:</div>
+                  </div>
+                  <input type="text" class="form-control" id="inlineFormInputGroupUsername" placeholder="Arrive">
+                  <div class="input-group-append">
+                    <button class="btn btn-dark" id='bartender' type="button">Update</button>
                   </div>
                 </div>
               </div>
