--- a/events/templates/events/detail/event_detail.html
+++ b/events/templates/events/detail/event_detail.html
@@ -2,18 +2,17 @@
 {% load staticfiles %}
 {% block content %}  
 
-<div class="container">
+
+
+<div class='container py-4 px-0' style='background:#e8ebf1;'>
 
   {% include 'events/detail/event_header.html' %}
   
-  <div class='card custom-shadow' style='border-radius:8px;'>
-    <div class='card-header'>
-      Schedule
+<div class='col-12 py-3 control-panel-header'>
+  SCHEDULE
+  </div>
       <div class='btn btn-dark float-right'>Save</div>
-      </div>
     
-    <div class='card-body mx-auto align-center'>
-      
       <div class='row mx-auto'>
         <div class='col col-12'>
           <div class='card-columns'>
@@ -26,8 +25,6 @@
         </div>
       </div>
       
-    </div>
-  </div>
 </div>
 
 {% endblock %}
