--- a/templates/base/base.html
+++ b/templates/base/base.html
@@ -4,6 +4,7 @@
   <html lang="en">
     <head>
       <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700|Roboto+Condensed:300,400i" rel="stylesheet" />
+      <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,400i,600,700" rel="stylesheet">
       <link href="https://fonts.googleapis.com/css?family=Lato:400,700,900|Montserrat:400,500,600,700" rel="stylesheet">
       <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css" integrity="sha384-9gVQ4dYFwwWSjIDZnLEWnxCjeSWFphJiwGPXr1jddIhOegiu1FwO5qRGvFXOdJZ4" crossorigin="anonymous" />
       <link rel="stylesheet" href="{% static 'events/css/style.css' %}" />
