--- a/events/templates/events/detail/event_header.html
+++ b/events/templates/events/detail/event_header.html
@@ -13,14 +13,192 @@
   </div>
 </div>
 
-<!--<div class='container pl-4 pt-3 pb-2 control-panel-header'>-->
-<!--  CONTROL PANEL-->
+
+<!--<div class='container pt-4 pb-4' style='background:#e8ebf1;'>-->
+<!--  <div class='col-12 pt-4'>-->
+    
+
+<!--        <div class='row'>-->
+        
+        
+        
+<!--        <div class='col' style='flex: 0 0 38%;max-width: 38%;'>-->
+<!--            <div class='card'>-->
+<!--              <div class="card-header py-2" style='color:black;background:#5a626f;color:white;font-family:"Open Sans"'>-->
+<!--                Update Entire Schedule-->
+<!--              </div>-->
+<!--              <div class='card-body pt-3' style='background:white;'>-->
+<!--                <span style='font-family: "Open Sans";color: #49505a;font-size: .9em;'>-->
+<!--                  All changes made to the schedule will be replaced with template values. You can't undo this action.</span>-->
+                  
+                  
+<!--                <div class="input-group mt-3">-->
+<!--                  <select class="custom-select" id="inputGroupSelect04">-->
+<!--                    <option selected>Template Category...</option>-->
+<!--                    <option value="1">Reset to Blank</option>-->
+<!--                    <option value="2">Reset to Last Save</option>-->
+<!--                    <option value="3">Reset to Previous Event</option>-->
+<!--                  </select>-->
+                
+<!--                </div>-->
+                
+<!--                <div class="input-group mt-3">-->
+<!--                  <select class="custom-select" id="inputGroupSelect04">-->
+<!--                    <option selected>Choose Subcategory</option>-->
+<!--                    <option value="1">Reset to Blank</option>-->
+<!--                    <option value="2">Reset to Last Save</option>-->
+<!--                    <option value="3">Reset to Previous Event</option>-->
+<!--                  </select>-->
+<!--                  <div class="input-group-append">-->
+<!--                    <button class="btn btn-dark" type="button">Update</button>-->
+<!--                  </div>-->
+<!--                </div>-->
+                
+                
+<!--            </div>-->
+<!--            </div>-->
+            
+          
+          
+<!--        </div>-->
+        
+<!--          <div class='col'>-->
+<!--            <div class='card'>-->
+<!--              <div class="card-header py-2" style='color:black;background:#5a626f;color:white;font-family:"Open Sans"'>-->
+<!--                Bulk Update by Role-->
+<!--              </div>-->
+              
+<!--              <ul class="list-group list-group-flush">-->
+
+<!--                <li class="list-group-item">-->
+<!--                  <div class="input-group">-->
+<!--                    <a class='px-0'>MGR:</a>-->
+<!--                    <input type="text" class="form-control bulk-arrival" id="inlineFormInputGroupUsername" placeholder="e.g. 6:30PM" />-->
+<!--                    <a><img src='{% static "events/img/refresh-button.svg" %}' alt="Refresh Icon" style='height:20px;'/></a>-->
+<!--                  </div>-->
+<!--                </li>-->
+                  
+<!--                <li class="list-group-item">  -->
+<!--                  <div class="input-group">-->
+<!--                    <a class='px-0'>PRP:</a>-->
+<!--                    <input type="text" class="form-control bulk-arrival" id="inlineFormInputGroupUsername" placeholder="e.g. 6:30PM">-->
+<!--                      <a><img src='{% static "events/img/refresh-button.svg" %}' alt="Refresh Icon" style='height:20px;'/></a>-->
+<!--                  </div>-->
+<!--                </li>-->
+              
+<!--                <li class="list-group-item">-->
+<!--                  <div class="input-group">-->
+<!--                    <a class='px-0'>CSH:</a>-->
+<!--                    <input type="text" class="form-control bulk-arrival" id="inlineFormInputGroupUsername" placeholder="e.g. 6:30PM">-->
+<!--                    <a><img src='{% static "events/img/refresh-button.svg" %}' alt="Refresh Icon" style='height:20px;'/></a>-->
+<!--                  </div>-->
+<!--                </li>-->
+                
+<!--                <li class="list-group-item">-->
+<!--                  <div class="input-group">-->
+<!--                    <a class='px-0'>BAR:</a>-->
+<!--                    <input type="text" class="form-control bulk-arrival" id="inlineFormInputGroupUsername" placeholder="e.g. 6:30PM">-->
+<!--                    <a><img src='{% static "events/img/refresh-button.svg" %}' alt="Refresh Icon" style='height:20px;'/></a>-->
+<!--                  </div>-->
+<!--                </li>-->
+                
+<!--              </ul>-->
+              
+<!--          </div>-->
+<!--        </div>-->
+        
+        
+        
+        
+<!--        <div class='col' style='flex: 0 0 36%; max-width: 36%;'>-->
+<!--          <div class='card' style='background:white;'>-->
+<!--            <div class="card-header py-2" style='color:black;background:#5a626f;color:white;font-family:"Open Sans"'>-->
+<!--    Show/Hide Sections-->
+<!--  </div>-->
+<!--            <ul class="list-group list-group-flush">-->
+              
+              
+<!--              <li class="list-group-item">-->
+<!--                <div class='row'>-->
+<!--                  <a class='col col-8'>Scheduled Shifts:</a>-->
+<!--                  <button type="button" class="btn btn-toggle toggle-scheduled float-right active" data-toggle="button" aria-pressed="true" autocomplete="off">-->
+<!--                    <div class="handle"></div>-->
+<!--                  </button>-->
+<!--                </div>-->
+<!--              </li>-->
+              
+<!--              <li class="list-group-item">-->
+<!--                <div class='row'>-->
+<!--                  <a class='col col-8'>Unscheduled Shifts:</a>-->
+<!--                  <button type="button" class="btn btn-toggle toggle-unscheduled active" data-toggle="button" aria-pressed="true" autocomplete="off">-->
+<!--                    <div class="handle"></div>-->
+<!--                  </button>-->
+<!--                </div>-->
+<!--              </li>-->
+              
+<!--              <li class="list-group-item">-->
+<!--                <div class='row'>-->
+<!--                  <a class='col col-8'>Inactive Locations:</a>-->
+<!--                  <button type="button" class="btn btn-toggle toggle-unscheduled" data-toggle="button" aria-pressed="false" autocomplete="off">-->
+<!--                    <div class="handle"></div>-->
+<!--                  </button>-->
+<!--                </div>-->
+<!--              </li>-->
+              
+<!--              <li class="list-group-item">-->
+<!--                <div class='row'>-->
+<!--                  <a class='col col-8'>Bar Locations:</a>-->
+<!--                  <button type="button" class="btn btn-toggle toggle-unscheduled" data-toggle="button" aria-pressed="false" autocomplete="off">-->
+<!--                    <div class="handle"></div>-->
+<!--                  </button>-->
+<!--                </div>-->
+<!--              </li>-->
+            
+<!--            </ul>-->
+<!--          </div>-->
+<!--        </div>-->
+        
+          
+ 
+        
+
+        
+    
+        
+        
+        
+<!--      </div>-->
+        
+    
+<!--</div>-->
 <!--</div>-->
 
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 <div class='container pt-4 pb-4' style='background:#e8ebf1;'>
-  <!--<div class='col-12 py-3 control-panel-header'>-->
-  <!--CONTROL PANEL-->
-  <!--</div>-->
   <div class='col-12 pt-4'>
     
 
@@ -28,79 +206,100 @@
         
         
         
-        
-        <div class='col' style='flex: 0 0 38%;max-width: 38%;'>
-            <div class='card'>
-              <div class="card-header py-2" style='color:black;background:#5a626f;color:white;font-family:"Open Sans"'>
+        <div class='col' style='flex: 0 0 33%;max-width: 33%;'>
+              <div style='color:#5a626f;font-family:"Open Sans";font-size: 1.2em;font-weight: 600;'>
                 Update Entire Schedule
               </div>
-              <div class='card-body' style='background:white;'>
-            <div class="input-group">
-              <select class="custom-select" id="inputGroupSelect04">
-                <option selected>Choose Template...</option>
-                <option value="1">Reset to Blank</option>
-                <option value="2">Reset to Last Save</option>
-                <option value="3">Reset to Previous Event</option>
-              </select>
-              <div class="input-group-append">
-                <button class="btn btn-dark" type="button">Update</button>
-              </div>
-            </div>
-            </div>
+              <div class='pt-2'>
+                <span style='font-family: "Open Sans";color: #49505a;font-size: .9em;'>
+                  All changes made to the schedule will be replaced with template values. You can't undo this action.
+                </span>
+                  
+                  
+                <div class="input-group mt-3">
+                  <select class="custom-select" id="inputGroupSelect04">
+                    <option selected>Template Category...</option>
+                    <option value="1">Reset to Blank</option>
+                    <option value="2">Reset to Last Save</option>
+                    <option value="3">Reset to Previous Event</option>
+                  </select>
+                
+                </div>
+                
+                <div class="input-group mt-3">
+                  <select class="custom-select" id="inputGroupSelect04">
+                    <option selected>Choose Subcategory</option>
+                    <option value="1">Reset to Blank</option>
+                    <option value="2">Reset to Last Save</option>
+                    <option value="3">Reset to Previous Event</option>
+                  </select>
+                  <div class="input-group-append">
+                    <button class="btn btn-dark" type="button">Update</button>
+                  </div>
+                </div>
+                
+                
             </div>
             
           
           
         </div>
         
-          <div class='col'>
-            <div class='card'>
-              <div class="card-header py-2" style='color:black;background:#5a626f;color:white;font-family:"Open Sans"'>
+          <div class='col-3'>
+              <div style='color:#5a626f;font-family:"Open Sans";font-size: 1.2em;font-weight: 600;'>
                 Bulk Update by Role
               </div>
               
-              <ul class="list-group list-group-flush">
-
-                <li class="list-group-item">
-                  <div class="input-group">
-                    <a class='px-0'>MGR:</a>
-                    <input type="text" class="form-control bulk-arrival" id="inlineFormInputGroupUsername" placeholder="e.g. 6:30PM" />
-                    <!--<button class="btn btn-dark" id='manager' type="button" style='height:1em;'>@</button>-->
+              <div class='mt-2'>
+                <div class='py-2 pl-0'>
+              <div style='font-family: "Open Sans";color: #49505a;font-size: 1em;line-height:2.1em;'>
+                
+                  <div class="input-group mb-1">
+                    <div class='col-2 px-0'><a>MG:</a></div>
+                    <div class='col-8 pl-0'>
+                      <input type="text" class="form-control bulk-arrival" id="inlineFormInputGroupUsername" placeholder="e.g. 6:30PM" />
+                    </div>
                     <a><img src='{% static "events/img/refresh-button.svg" %}' alt="Refresh Icon" style='height:20px;'/></a>
+                    
                   </div>
-                </li>
                   
-                <li class="list-group-item">  
-                  <div class="input-group">
-                    <a class='px-0'>PRP:</a>
+                  <div class="input-group mb-1">
+                    <div class='col-2 px-0'><a>PRP:</a></div>
+                    <div class='col-8 pl-0'>
                     <input type="text" class="form-control bulk-arrival" id="inlineFormInputGroupUsername" placeholder="e.g. 6:30PM">
-                    <!--<button class="btn btn-dark" id='prep' type="button" style='height:1em;'>-->
+                    </div>
+                    <div>
                       <a><img src='{% static "events/img/refresh-button.svg" %}' alt="Refresh Icon" style='height:20px;'/></a>
-                    <!--</button>-->
+                    </div>
                   </div>
-                </li>
-              
-                <li class="list-group-item">
-                  <div class="input-group">
-                    <a class='px-0'>CSH:</a>
+                  
+                  <div class="input-group mb-1">
+                    <div class='col-2 px-0'><a>CSH:</a></div>
+                    <div class='col-8 pl-0'>
                     <input type="text" class="form-control bulk-arrival" id="inlineFormInputGroupUsername" placeholder="e.g. 6:30PM">
-                    <!--<button class="btn btn-dark" id='cashier' type="button" style='height:1em;'>@</button>-->
+                    </div>
                     <a><img src='{% static "events/img/refresh-button.svg" %}' alt="Refresh Icon" style='height:20px;'/></a>
                   </div>
-                </li>
-                
-                <li class="list-group-item">
-                  <div class="input-group">
-                    <a class='px-0'>BAR:</a>
+                  
+                  <div class="input-group mb-1">
+                    <div class='col-2 px-0'><a>BR:</a></div>
+                    <div class='col-8 pl-0'>
                     <input type="text" class="form-control bulk-arrival" id="inlineFormInputGroupUsername" placeholder="e.g. 6:30PM">
-                    <!--<button class="btn btn-dark" id='bartender' type="button" style='height:1em;'>@</button>-->
+                    </div>
                     <a><img src='{% static "events/img/refresh-button.svg" %}' alt="Refresh Icon" style='height:20px;'/></a>
                   </div>
-                </li>
-                
-              </ul>
+                  
+                  
+              </div>
               
-          </div>
+              </div>
+              </div>
+     
+              
+
+                  
+               
+              
         </div>
         
         
@@ -140,10 +339,20 @@
                   </button>
                 </div>
               </li>
+              
+              <li class="list-group-item">
+                <div class='row'>
+                  <a class='col col-8'>Bar Locations:</a>
+                  <button type="button" class="btn btn-toggle toggle-unscheduled" data-toggle="button" aria-pressed="false" autocomplete="off">
+                    <div class="handle"></div>
+                  </button>
+                </div>
+              </li>
             
             </ul>
           </div>
         </div>
+        
           
  
         
@@ -158,3 +367,4 @@
     
 </div>
 </div>
+
