--- a/events/templates/events/detail/event_detail.html
+++ b/events/templates/events/detail/event_detail.html
@@ -2,29 +2,22 @@
 {% load staticfiles %}
 {% block content %}  
 
-
-
-<div class='container py-4 px-0' style='background:#e8ebf1;'>
-
-  {% include 'events/detail/event_header.html' %}
-  
-<div class='col-12 py-3 control-panel-header'>
-  SCHEDULE
+<div class='container px-0'>
+  {% include 'events/detail/header/event_header.html' %}
+  <div class='col-12 py-3 control-panel-header'>
+  <span>SCHEDULE</span>
   </div>
-      <div class='btn btn-dark float-right'>Save</div>
-    
-      <div class='row mx-auto'>
-        <div class='col col-12'>
-          <div class='card-columns'>
-          {% for location, position in schedule.items %}
-          
-            {% include 'events/detail/location_card.html' with location=location position=position %}
-          {% endfor %}
-          </div>
-          <hr />
-        </div>
+  <div class='btn btn-dark float-right'>Save</div>
+  <div class='row mx-auto'>
+    <div class='col col-12'>
+      <div class='card-columns'>
+        {% for location, position in schedule.items %}
+          {% include 'events/detail/location_card.html' with location=location position=position %}
+        {% endfor %}
       </div>
-      
+      <hr />
+    </div>
+  </div>
 </div>
 
 {% endblock %}
